--- a/MultiMiner.Remoting.Server/MultiMiner.Remoting.Server.csproj
+++ b/MultiMiner.Remoting.Server/MultiMiner.Remoting.Server.csproj
@@ -53,6 +53,7 @@
     <Compile Include="Data\Transfer\Machine.cs" />
     <Compile Include="IRemotingService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RemoteCommandEventArgs.cs" />
     <Compile Include="RemotingServer.cs" />
     <Compile Include="RemotingService.cs" />
   </ItemGroup>
