--- a/MultiMiner.Utility/MultiMiner.Utility.csproj
+++ b/MultiMiner.Utility/MultiMiner.Utility.csproj
@@ -46,10 +46,12 @@
     <Compile Include="ConfigurationReaderWriter.cs" />
     <Compile Include="FileCopier.cs" />
     <Compile Include="IdleTimeFinder.cs" />
+    <Compile Include="IniFileParser.cs" />
     <Compile Include="Networking.cs" />
     <Compile Include="ObjectCopier.cs" />
     <Compile Include="ObjectLogger.cs" />
     <Compile Include="OSVersionPlatform.cs" />
+    <Compile Include="PlistParser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SerializableDictionary.cs" />
     <Compile Include="Unzipper.cs" />
