--- a/MultiMiner.Utility.Tests/MultiMiner.Utility.Tests.csproj
+++ b/MultiMiner.Utility.Tests/MultiMiner.Utility.Tests.csproj
@@ -53,6 +53,7 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="Networking\LocalNetworkTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnzipperTests.cs" />
   </ItemGroup>
@@ -67,6 +68,7 @@
       <Name>MultiMiner.Utility</Name>
     </ProjectReference>
   </ItemGroup>
+  <ItemGroup />
   <Choose>
     <When Condition="'$(VisualStudioVersion)' == '10.0' And '$(IsCodedUITest)' == 'True'">
       <ItemGroup>
