--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -64,6 +64,7 @@
     <Compile Include="AdvancedSettingsForm.Designer.cs">
       <DependentUpon>AdvancedSettingsForm.cs</DependentUpon>
     </Compile>
+    <Compile Include="Configuration\NetworkDevicesConfiguration.cs" />
     <Compile Include="Configuration\PathConfiguration.cs" />
     <Compile Include="DetailsControl.cs">
       <SubType>UserControl</SubType>
@@ -77,6 +78,8 @@
     <Compile Include="DeviceListView.Designer.cs">
       <DependentUpon>DeviceListView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\IPEndPointExtensions.cs" />
+    <Compile Include="Extensions\NetworkDeviceExtensions.cs" />
     <Compile Include="InstancesControl.cs">
       <SubType>UserControl</SubType>
     </Compile>
@@ -339,6 +342,10 @@
     <ProjectReference Include="..\MultiMiner.Xgminer.Api\MultiMiner.Xgminer.Api.csproj">
       <Project>{5b43ad9d-8b67-4aa8-b76d-aa83caf9d29f}</Project>
       <Name>MultiMiner.Xgminer.Api</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\MultiMiner.Xgminer.Discovery\MultiMiner.Xgminer.Discovery.csproj">
+      <Project>{ed66caa1-4826-46e9-bb23-c56d0cff5c7a}</Project>
+      <Name>MultiMiner.Xgminer.Discovery</Name>
     </ProjectReference>
     <ProjectReference Include="..\MultiMiner.Xgminer\MultiMiner.Xgminer.csproj">
       <Project>{0dbef993-1b34-4d80-ab6a-f662604325dc}</Project>
