Additional unit / integration tests for MultiMiner.Utility.Networking

--- a/MultiMiner.Utility.Tests/MultiMiner.Utility.Tests.csproj
+++ b/MultiMiner.Utility.Tests/MultiMiner.Utility.Tests.csproj
@@ -54,6 +54,8 @@
   </Choose>
   <ItemGroup>
     <Compile Include="Networking\LocalNetworkTests.cs" />
+    <Compile Include="Networking\PortScannerTests.cs" />
+    <Compile Include="Networking\IPRangeTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UnzipperTests.cs" />
   </ItemGroup>
