Refactoring MultiMiner.Utility into namespaces

--- a/MultiMiner.Engine/MultiMiner.Engine.csproj
+++ b/MultiMiner.Engine/MultiMiner.Engine.csproj
@@ -39,6 +39,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ApplicationPaths.cs" />
     <Compile Include="Configuration\CoinConfiguration.cs" />
     <Compile Include="Configuration\Obsolete\StrategyConfiguration.cs" />
     <Compile Include="Configuration\StrategyConfiguration.cs" />
