--- a/MultiMiner.Win/MultiMiner.Win.csproj
+++ b/MultiMiner.Win/MultiMiner.Win.csproj
@@ -78,6 +78,7 @@
     <Compile Include="DeviceListView.Designer.cs">
       <DependentUpon>DeviceListView.cs</DependentUpon>
     </Compile>
+    <Compile Include="Extensions\CoinInformationExtensions.cs" />
     <Compile Include="Extensions\IPEndPointExtensions.cs" />
     <Compile Include="Extensions\NetworkDeviceExtensions.cs" />
     <Compile Include="InstancesControl.cs">
