--- a/MultiMiner.MobileMiner.Api/MultiMiner.MobileMiner.Api.csproj
+++ b/MultiMiner.MobileMiner.Api/MultiMiner.MobileMiner.Api.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ApiContext.cs" />
+    <Compile Include="InputValidation.cs" />
     <Compile Include="MiningStatistics.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="RemoteCommand.cs" />
