--- a/MultiMiner.Utility/MultiMiner.Utility.csproj
+++ b/MultiMiner.Utility/MultiMiner.Utility.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Management" />
     <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Windows.Forms" />
@@ -44,6 +45,25 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Forms\HourGlass.cs" />
+    <Compile Include="Forms\MessageBoxFontForm.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Forms\MessageBoxFontForm.Designer.cs">
+      <DependentUpon>MessageBoxFontForm.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\MessageBoxFontUserControl.cs">
+      <SubType>UserControl</SubType>
+    </Compile>
+    <Compile Include="Forms\MessageBoxFontUserControl.Designer.cs">
+      <DependentUpon>MessageBoxFontUserControl.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Forms\NoFlickerListView.cs">
+      <SubType>Component</SubType>
+    </Compile>
+    <Compile Include="Forms\NoFlickerListView.Designer.cs">
+      <DependentUpon>NoFlickerListView.cs</DependentUpon>
+    </Compile>
     <Compile Include="OS\StartupShortcut.cs" />
     <Compile Include="Serialization\ConfigurationReaderWriter.cs" />
     <Compile Include="IO\FileCopier.cs" />
